welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:8: error: ';' expected but 'false' found.
  retunr false
         ^